--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2387,6 +2387,7 @@ botania {
     B:shinyFlower.8=false
     B:shinyFlower.9=false
     B:solidVine=false
+    B:sparkChanger=false
     B:spawnerClaw=false
     B:spreader=false
     B:spreader.1=false
@@ -5976,6 +5977,7 @@ gardentrees {
     B:thinlog.12716=false
     B:thinlog.1272=false
     B:thinlog.1273=false
+    B:thinlog.1274=false
     B:thinlog.12741=false
     B:thinlog.12743=false
     B:thinlog.12766=false
@@ -5998,15 +6000,18 @@ gardentrees {
     B:thinlog.1288=false
     B:thinlog.12883=false
     B:thinlog.1289=false
+    B:thinlog.1290=false
     B:thinlog.12909=false
     B:thinlog.12919=false
     B:thinlog.1299=false
     B:thinlog.13114=false
     B:thinlog.13115=false
+    B:thinlog.13116=false
     B:thinlog.13117=false
     B:thinlog.1315=false
     B:thinlog.13150=false
     B:thinlog.13151=false
+    B:thinlog.13152=false
     B:thinlog.13153=false
     B:thinlog.13258=false
     B:thinlog.13259=false
@@ -6017,6 +6022,7 @@ gardentrees {
     B:thinlog.13264=false
     B:thinlog.13265=false
     B:thinlog.13266=false
+    B:thinlog.13267=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6047,10 +6053,12 @@ gardentrees {
     B:thinlog.13558=false
     B:thinlog.13560=false
     B:thinlog.13561=false
+    B:thinlog.13562=false
     B:thinlog.13573=false
     B:thinlog.13574=false
     B:thinlog.13576=false
     B:thinlog.13577=false
+    B:thinlog.13578=false
     B:thinlog.13587=false
     B:thinlog.13603=false
     B:thinlog.13636=false
@@ -6138,9 +6146,11 @@ gardentrees {
     B:thinlog.4926=false
     B:thinlog.4940=false
     B:thinlog.4941=false
+    B:thinlog.4942=false
     B:thinlog.4943=false
     B:thinlog.4958=false
     B:thinlog.4959=false
+    B:thinlog.4960=false
     B:thinlog.4961=false
     B:thinlog.5=false
     B:thinlog.5066=false
@@ -6152,6 +6162,7 @@ gardentrees {
     B:thinlog.5072=false
     B:thinlog.5073=false
     B:thinlog.5074=false
+    B:thinlog.5075=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6181,10 +6192,12 @@ gardentrees {
     B:thinlog.5366=false
     B:thinlog.5368=false
     B:thinlog.5369=false
+    B:thinlog.5370=false
     B:thinlog.5381=false
     B:thinlog.5382=false
     B:thinlog.5384=false
     B:thinlog.5385=false
+    B:thinlog.5386=false
     B:thinlog.5395=false
     B:thinlog.5411=false
     B:thinlog.5444=false
@@ -6216,6 +6229,7 @@ gardentrees {
     B:thinlog.621=false
     B:thinlog.62281=false
     B:thinlog.62282=false
+    B:thinlog.62283=false
     B:thinlog.62284=false
     B:thinlog.631=false
     B:thinlog.761=false
@@ -6232,11 +6246,13 @@ gardentrees {
     B:thinlog.830=false
     B:thinlog.833=false
     B:thinlog.834=false
+    B:thinlog.835=false
     B:thinlog.836=false
     B:thinlog.8361=false
     B:thinlog.8403=false
     B:thinlog.844=false
     B:thinlog.845=false
+    B:thinlog.846=false
     B:thinlog.847=false
     B:thinlog.8603=false
     B:thinlog.8605=false
@@ -6244,6 +6260,7 @@ gardentrees {
     B:thinlog.862=false
     B:thinlog.8620=false
     B:thinlog.863=false
+    B:thinlog.864=false
     B:thinlog.8645=false
     B:thinlog.8647=false
     B:thinlog.865=false
@@ -6267,9 +6284,11 @@ gardentrees {
     B:thinlog.8823=false
     B:thinlog.9018=false
     B:thinlog.9019=false
+    B:thinlog.9020=false
     B:thinlog.9021=false
     B:thinlog.9054=false
     B:thinlog.9055=false
+    B:thinlog.9056=false
     B:thinlog.9057=false
     B:thinlog.9162=false
     B:thinlog.9163=false
@@ -6280,6 +6299,7 @@ gardentrees {
     B:thinlog.9168=false
     B:thinlog.9169=false
     B:thinlog.9170=false
+    B:thinlog.9171=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6309,10 +6329,12 @@ gardentrees {
     B:thinlog.9462=false
     B:thinlog.9464=false
     B:thinlog.9465=false
+    B:thinlog.9466=false
     B:thinlog.9477=false
     B:thinlog.9478=false
     B:thinlog.9480=false
     B:thinlog.9481=false
+    B:thinlog.9482=false
     B:thinlog.9491=false
     B:thinlog.9507=false
     B:thinlog.9540=false
@@ -6326,6 +6348,7 @@ gardentrees {
     B:thinlog.976=false
     B:thinlog.977=false
     B:thinlog.978=false
+    B:thinlog.979=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -6363,6 +6386,7 @@ gardentrees {
     B:thinlogfence.12716=false
     B:thinlogfence.1272=false
     B:thinlogfence.1273=false
+    B:thinlogfence.1274=false
     B:thinlogfence.12741=false
     B:thinlogfence.12743=false
     B:thinlogfence.12766=false
@@ -6385,15 +6409,18 @@ gardentrees {
     B:thinlogfence.1288=false
     B:thinlogfence.12883=false
     B:thinlogfence.1289=false
+    B:thinlogfence.1290=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
     B:thinlogfence.1299=false
     B:thinlogfence.13114=false
     B:thinlogfence.13115=false
+    B:thinlogfence.13116=false
     B:thinlogfence.13117=false
     B:thinlogfence.1315=false
     B:thinlogfence.13150=false
     B:thinlogfence.13151=false
+    B:thinlogfence.13152=false
     B:thinlogfence.13153=false
     B:thinlogfence.13258=false
     B:thinlogfence.13259=false
@@ -6404,6 +6431,7 @@ gardentrees {
     B:thinlogfence.13264=false
     B:thinlogfence.13265=false
     B:thinlogfence.13266=false
+    B:thinlogfence.13267=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6434,10 +6462,12 @@ gardentrees {
     B:thinlogfence.13558=false
     B:thinlogfence.13560=false
     B:thinlogfence.13561=false
+    B:thinlogfence.13562=false
     B:thinlogfence.13573=false
     B:thinlogfence.13574=false
     B:thinlogfence.13576=false
     B:thinlogfence.13577=false
+    B:thinlogfence.13578=false
     B:thinlogfence.13587=false
     B:thinlogfence.13603=false
     B:thinlogfence.13636=false
@@ -6525,9 +6555,11 @@ gardentrees {
     B:thinlogfence.4926=false
     B:thinlogfence.4940=false
     B:thinlogfence.4941=false
+    B:thinlogfence.4942=false
     B:thinlogfence.4943=false
     B:thinlogfence.4958=false
     B:thinlogfence.4959=false
+    B:thinlogfence.4960=false
     B:thinlogfence.4961=false
     B:thinlogfence.5=false
     B:thinlogfence.5066=false
@@ -6539,6 +6571,7 @@ gardentrees {
     B:thinlogfence.5072=false
     B:thinlogfence.5073=false
     B:thinlogfence.5074=false
+    B:thinlogfence.5075=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6568,10 +6601,12 @@ gardentrees {
     B:thinlogfence.5366=false
     B:thinlogfence.5368=false
     B:thinlogfence.5369=false
+    B:thinlogfence.5370=false
     B:thinlogfence.5381=false
     B:thinlogfence.5382=false
     B:thinlogfence.5384=false
     B:thinlogfence.5385=false
+    B:thinlogfence.5386=false
     B:thinlogfence.5395=false
     B:thinlogfence.5411=false
     B:thinlogfence.5444=false
@@ -6603,6 +6638,7 @@ gardentrees {
     B:thinlogfence.621=false
     B:thinlogfence.62281=false
     B:thinlogfence.62282=false
+    B:thinlogfence.62283=false
     B:thinlogfence.62284=false
     B:thinlogfence.631=false
     B:thinlogfence.761=false
@@ -6619,11 +6655,13 @@ gardentrees {
     B:thinlogfence.830=false
     B:thinlogfence.833=false
     B:thinlogfence.834=false
+    B:thinlogfence.835=false
     B:thinlogfence.836=false
     B:thinlogfence.8361=false
     B:thinlogfence.8403=false
     B:thinlogfence.844=false
     B:thinlogfence.845=false
+    B:thinlogfence.846=false
     B:thinlogfence.847=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
@@ -6631,6 +6669,7 @@ gardentrees {
     B:thinlogfence.862=false
     B:thinlogfence.8620=false
     B:thinlogfence.863=false
+    B:thinlogfence.864=false
     B:thinlogfence.8645=false
     B:thinlogfence.8647=false
     B:thinlogfence.865=false
@@ -6654,9 +6693,11 @@ gardentrees {
     B:thinlogfence.8823=false
     B:thinlogfence.9018=false
     B:thinlogfence.9019=false
+    B:thinlogfence.9020=false
     B:thinlogfence.9021=false
     B:thinlogfence.9054=false
     B:thinlogfence.9055=false
+    B:thinlogfence.9056=false
     B:thinlogfence.9057=false
     B:thinlogfence.9162=false
     B:thinlogfence.9163=false
@@ -6667,6 +6708,7 @@ gardentrees {
     B:thinlogfence.9168=false
     B:thinlogfence.9169=false
     B:thinlogfence.9170=false
+    B:thinlogfence.9171=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6696,10 +6738,12 @@ gardentrees {
     B:thinlogfence.9462=false
     B:thinlogfence.9464=false
     B:thinlogfence.9465=false
+    B:thinlogfence.9466=false
     B:thinlogfence.9477=false
     B:thinlogfence.9478=false
     B:thinlogfence.9480=false
     B:thinlogfence.9481=false
+    B:thinlogfence.9482=false
     B:thinlogfence.9491=false
     B:thinlogfence.9507=false
     B:thinlogfence.9540=false
@@ -6713,6 +6757,7 @@ gardentrees {
     B:thinlogfence.976=false
     B:thinlogfence.977=false
     B:thinlogfence.978=false
+    B:thinlogfence.979=false
 }
 
 
@@ -7364,6 +7409,7 @@ malisisdoors {
     B:playersensor=false
     B:rustyHatch=false
     B:rustyLadder=false
+    B:saloon=false
     B:shojidoor=false
     B:slidingtrapdoor=false
     B:vanishingblock=false
