--- a/config/iChunUtil.cfg
+++ b/config/iChunUtil.cfg
@@ -1,6 +1,21 @@
 # Configuration file
 
 ##########################################################################################################
+# patreon
+#--------------------------------------------------------------------------------------------------------#
+# Patreon related configs.
+##########################################################################################################
+
+patreon {
+    # Do you want to show your patron reward to other players?
+    # 
+    # Min: 0
+    # Max: 1
+    I:showPatronReward=1
+}
+
+
+##########################################################################################################
 # versioncheck
 #--------------------------------------------------------------------------------------------------------#
 # These configs are for the mod version update checker added by iChunUtil.
@@ -35,7 +50,7 @@ versioncheck {
 ##########################################################################################################
 
 versionsave {
-    I:dayCheck=27
+    I:dayCheck=6
     S:lastCheck=
 }
 
