--- a/config/GrimoireOfGaia.cfg
+++ b/config/GrimoireOfGaia.cfg
@@ -3,7 +3,7 @@
 "base damage" {
     # If BaseDamage is set to true, all mobs will deal 1.0 piercing damage (ignores armor).
     S:" "= 
-    B:BaseDamage=false
+    B:BaseDamage=true
 }
 
 
