--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -3087,6 +3087,7 @@ blocks_pickaxe {
     I:"ReactorCraft:reactorcraft_block_ore:6"=1
     I:"ReactorCraft:reactorcraft_block_ore:7"=0
     I:"ReactorCraft:reactorcraft_block_ore:8"=1
+    I:"ReactorCraft:reactorcraft_block_ore:9"=2
     I:"RotaryCraft:rotarycraft_block_blastglass:0"=3
     I:"RotaryCraft:rotarycraft_block_blastglass:1"=3
     I:"RotaryCraft:rotarycraft_block_blastglass:10"=3
