--- a/config/IguanaTinkerTweaks/MaterialDefaults.cfg
+++ b/config/IguanaTinkerTweaks/MaterialDefaults.cfg
@@ -818,6 +818,18 @@ materials {
         D:xpAmount=1.0
     }
 
+    onion {
+        I:attack=6
+        S:color=light_purple
+        I:durability=8
+        D:handleModifier=0.30000001192092896
+        I:harvestLevel=2
+        I:miningSpeed=90
+        I:reinforced=0
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
 }
 
 
