--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -172,7 +172,7 @@ pickleveling {
 
 randombonuses {
     B:allowAttack=true
-    B:allowAutosmelt=true
+    B:allowAutosmelt=false
     B:allowBaneOfArthropods=true
     B:allowBeheading=true
     B:allowCritical=true
