--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -238,7 +238,7 @@ items {
     B:hangglider=true
     B:heightMap=true
     B:infoBook=true
-    B:luggage=true
+    B:luggage=false
     B:paintBrush=true
     B:pedometer=true
     B:pencilGlasses=true
