--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -13,11 +13,15 @@
     B:"Allow Danger in Rainbow Forests"=false
     B:"Allow duplication wand to copy TileEntities"=false
     B:"Always Respawn EnderDragon"=false
+    B:"Auxiliary Fragment Acquisition"=false
     I:"Chest Generation Tier"=4
     B:"Crystal Plants May Drop Shards"=true
     B:"Delete End on Unload"=false
+    I:"Dimension Structure Difficulty"=3
     B:"Disable Pendant Particles"=true
+    I:"Duplication Wand Max Volume"=1000
     B:"Dye Block Particles"=true
+    B:"Enable Ball Lightning"=true
     B:"Enable Biome Painter"=true
     B:"Enable Ender TNT"=true
     I:"Ender Forest Biome Weight"=10
@@ -35,6 +39,7 @@
     B:"Make ThaumCraft integration require ThaumCraft progression"=false
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
+    B:"Pylons Chunkload Selves Once Used"=true
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=10
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
@@ -43,6 +48,7 @@
     B:Retrogeneration=false
     B:"Run Worldgen in Superflat Worlds"=false
     B:"Spawn with CC Lexicon"=true
+    B:"Use reduced-size Pylon Aura image; only enable this if you get a full-screen color washout"=false
     B:"Use vanilla keybind system for ability selection GUI"=false
     I:"Vanilla Dye Drop Percentage"=100
 }
@@ -81,6 +87,7 @@
     B:"IndustrialCraft Rubber"=true
     B:Ironwood=true
     B:Jacaranda=true
+    B:Lighted=true
     B:Loftwood=true
     B:Magic=true
     B:Mangrove=true
