--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -29,6 +29,7 @@
 
 
 "control setup" {
+    B:"Allow Fluorite Recoloring"=false
     B:"Fission Cores Chunkload When Active"=true
     B:"Generate Calcite Ore Even If Other Mods Do"=false
     B:"Generate Magnetite Ore Even If Other Mods Do"=false
