--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -59,10 +59,12 @@
     I:"Bait Box Range"=128
     B:"Block Damage from Destructive Machines"=true
     I:"Block Ram Range"=512
+    I:"Borer Chunk Gen Radius"=0
     B:"Borer Requires Maintenance"=false
     I:"Breeder Range"=128
     I:"Cave Scanner FOV"=16
     I:"Chest Generation Tier"=4
+    I:"Chunk Loader Max Radius in Chunks"=8
     B:"Color Blind Mode"=false
     B:"Conservative Jetpack Firing"=true
     B:"Crafting Table can Make Machines"=false
@@ -72,6 +74,9 @@
     B:"Disable Silver Iodide Cannon Rain"=false
     I:"EMP Charging Speed"=4
     B:"Enable Achievements"=true
+    B:"Enable Chunk Loader"=true
+    B:"Enable Item Cannon"=true
+    B:"Enable Light Bridge"=true
     B:"Engine Running Sounds"=true
     D:"Engine Volume"=1.0
     B:"Extractor Drill Wears Down"=false
@@ -108,7 +113,7 @@
     B:"Reload Handbook Data on Open"=false
     B:"Render projector lines"=true
     B:"Rotate Hose/Pipe/Fuel Line Recipes"=false
-    B:"Run power transfer code on client"=false
+    B:"Run power transfer code on client"=true
     B:"Show Force Fields"=true
     I:"Sonic Borer Range"=512
     B:"Spawn Mobs When Harvesting Spawners By Hand"=true
@@ -118,7 +123,7 @@
     I:"Sprinkler Particle Density"=4
     B:"Terraformer Block Editing"=true
     B:"Tools Clear Chat"=false
-    B:"Turrets can target players"=true
+    B:"Turrets can target players"=false
     B:"Tutorial Mode"=false
 }
 
