--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -57,7 +57,7 @@ general {
      >
 
     # Should engines explode upon overheat?
-    B:canEnginesExplode=true
+    B:canEnginesExplode=false
 
     # adjust energy value of Fuel in Combustion Engines
     D:fuel.fuel.combustion=1.0
@@ -98,7 +98,7 @@ general {
     B:pumpsNeedRealPower=false
 
     # Should I check the BuildCraft version on startup?
-    B:updateCheck=false
+    B:updateCheck=true
     S:version=7.0.13
 
     pipes {
