--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -218,6 +218,28 @@ Fluid {
         B:Flammable=true
     }
 
+    Aerotheum {
+        # Enable this for Fluid Aerotheum Source blocks to dissipate back into air above a given y-value.
+        B:Dissipate=true
+
+        # Enable this for Fluid Aerotheum to do...things.
+        B:Effect=true
+
+        # Enable this for Fluid Aerotheum Source blocks to gradually float upwards.
+        B:Float=true
+
+        # This adjusts the y-value where Fluid Aerotheum will *always* dissipate, if that is enabled.
+        I:MaxHeight=120
+    }
+
+    Petrotheum {
+        # Enable this for Fluid Petrotheum to make things more in tune with the earth.
+        B:Effect=true
+
+        # Enable this for Fluid Petrotheum Source blocks to gradually fall downwards.
+        B:Fall=true
+    }
+
 }
 
 
@@ -264,6 +286,58 @@ Mob {
 
     }
 
+    Blitz {
+        # Set this to false to disable Blitzes entirely. Jerk.
+        B:Enable=true
+
+        # Set this to false for the Blitz to use a mod-specific ID; this removes the Spawn Egg.
+        B:UseGlobalId=true
+
+        Spawn {
+            # This sets the maximum light level Blitzes can spawn at, if restricted.
+            I:Light.Level=8
+
+            # Set this to false for Blitzes to spawn at any light level.
+            B:Light.Limit=true
+
+            # This sets the maximum light number of Blitzes that spawn in a group.
+            I:MaxGroupSize=4
+
+            # This sets the minimum number of Blitzes that spawn in a group.
+            I:MinGroupSize=1
+
+            # This sets the relative spawn weight for Blitzes.
+            I:SpawnWeight=10
+        }
+
+    }
+
+    Basalz {
+        # Set this to false to disable Basalzes entirely. Jerk.
+        B:Enable=true
+
+        # Set this to false for the Basalz to use a mod-specific ID; this removes the Spawn Egg.
+        B:UseGlobalId=true
+
+        Spawn {
+            # This sets the maximum light level Basalzes can spawn at, if restricted.
+            I:Light.Level=8
+
+            # Set this to false for Basalzes to spawn at any light level.
+            B:Light.Limit=true
+
+            # This sets the maximum light number of Basalzes that spawn in a group.
+            I:MaxGroupSize=4
+
+            # This sets the minimum number of Basalzes that spawn in a group.
+            I:MinGroupSize=1
+
+            # This sets the relative spawn weight for Basalzes.
+            I:SpawnWeight=10
+        }
+
+    }
+
 }
 
 
@@ -273,6 +347,7 @@ Plugins {
         B:Enable=true
 
         Straw {
+            B:Aerotheum=true
             B:Coal=true
             B:Cryotheum=true
             B:Ender=true
@@ -280,6 +355,7 @@ Plugins {
             # This controls the maximum distance (in blocks) a player will teleport from drinking Ender. (Min: 8, Max: 65536)
             I:Ender.Range=16384
             B:Glowstone=true
+            B:Petrotheum=true
             B:Pyrotheum=true
             B:Redstone=true
         }
@@ -359,11 +435,15 @@ Plugins {
 
     }
 
+    EE3 {
+        B:Enable=true
+    }
+
 }
 
 
 Version {
-    S:Identifier=1.7.10R1.0.0
+    S:Identifier=1.7.10R1.2.0B1
 }
 
 
