--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,10 +1,10 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Jul 06 23:28:07 MDT 2015
-enableMiddleClick=true
+#Wed Jul 08 21:42:32 MDT 2015
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
-enableAutoRefill=true
+enableAutoRefill=false
 autoRefillBeforeBreak=false
 autoRefillDamageThreshhold=5
 enableSounds=true
