--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -1,15 +1,20 @@
 # Configuration file
 
 "control setup" {
-    B:"Agressive Update Notification"=true
+    B:"Agressive Update Notification"=false
     B:"Console Loading Info"=true
     B:"Custom/Donator Renders"=true
     B:"Debug Mode"=false
     B:"Disable Renders For Debug"=false
+    B:"Force Gregtech Ore Compatibility"=true
     B:"Increase sound channel count"=true
+    B:"Log Sync Packet CME Avoidance"=true
     B:"Log errors to chat"=true
+    B:"Only show update notice to Ops or SSP"=false
+    B:"Only show update notice to pack creator"=false
     B:"Restore Obsidian Blast Resistance"=true
     B:"Show TileEntity NBT when using TAB"=false
+    B:"Slow Sync Packets - Only use this as a last resort"=false
     B:"Sort Creative Tabs Alphabetically"=true
     I:"Sync Packet ID"=182
 }
