--- a/config/cofh/core/common.cfg
+++ b/config/cofh/core/common.cfg
@@ -17,7 +17,7 @@ General {
     B:EnableItemStacking=true
 
     # Set to true to be informed of non-critical updates. You will still receive critical update notifications.
-    B:EnableUpdateNotifications=true
+    B:EnableUpdateNotifications=false
 }
 
 
@@ -28,7 +28,7 @@ Security {
 
 
 Version {
-    S:Identifier=1.7.10R3.0.2
+    S:Identifier=1.7.10R3.0.3B2
 }
 
 
